Add font management for polyglossia
* doc/org-manual.org: Document existance of
~org-latex-polyglossia-font-config~ in the manual.
* lisp/ox-latex.el: (org-latex-polyglossia-font-config,
org-latex--polyglossia-fonts, org-latex-guess-polyglossia-language)
(org-latex-polyglossia-font-config): New variable to store fontspec
configurations needed in conjunction iwth the Polyglossia package.
(org-latex--polyglossia-fonts): Generate the string with the font
configurations depending on the languages controlled by polyglossia.
(org-latex-guess-polyglossia-language): Collect languages controlled
by polyglossia and append the font configurations to the polyglossia
configuration.

When using polyglossia, you need an extra configuration to map fonts
and languages. This is palced after the polyglossia configuration.

--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -14389,6 +14389,10 @@ This would produce in LaTeX (with the actual =polyglossia= syntax):
 \setotherlanguage{french}
 #+end_example
 
+If you use =polyglossia=, you can control the fonts used in the PDF
+document with the local variable ~org-latex-polyglossia-font-config~.
+#+vindex: org-latex-polyglossia-font-config
+
 *** Quoting LaTeX code
 :PROPERTIES:
 :DESCRIPTION: Incorporating literal @LaTeX{} code.
